2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>

	* MANIFEST: Updated.

2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/oval_plugins.c: Added notice regarding running ovaldi with
	reduced privileges.

2008-09-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/comm.c (comm_init):  Removed setting of scan_ids
	and pubkey_auth.

2008-09-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/openvasd.c (server_thread): Removed
	conditional for ntp_11, because this is standard for otp.

	* openvasd/comm.c (comm_init):  Removed setting of ntp_11.
	(comm_wait_order): Removed conditional for ntp_11, because
	this is standard for otp.

	* openvasd/Makefile: Removed module ntp_10.

	* openvasd/ntp_10.h, openvasd/ntp_10.c: Removed. The only
	method defined there is not needed anymore since no ntp_10
	fallback does make sense with otp.

2008-09-22  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/ntp_11.c (ntp_11_parse_input): Replaced call of ntp_11_prefs()
	by calling ntp_11_read_prefs() for PREFERENCES command. ntp_11_prefs
	does nothing relevant except calling ntp_11_read_prefs.
	(ntp_11_prefs): Removed. It only handled escape_crlf which is fixed to
	true for OTP.

	* openvasd/attack.c (attack_network): Removed retrieval of ntp_caps as
	these are not used here anyway.

	* openvasd/comm.c (comm_init): Removed any consideration of ntpcaps
	element "plugins_xrefs", "timestamps" and "ciphered".

2008-09-19  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/ntp_11.c (ntp_11_prefs, ntp_11_send_prefs_errors): Removed
	support for PREFERENCES ERROR message type as it was never properly
	implemented and is now obsolete.

	* openvasd/comm.c (plugin_send_infos): Tidied up plugin search code,
	fixed possible bug where an plugin would have not been found if it was
	the last plugin in the list.

2008-09-17  Michael Wiegand <michael.wiegand@intevation.de>
