@@ -1,5 +1,11 @@
 2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>
 
+	* openvasd/oval_plugins.c (ovaldi_launch), openvasd/dirutils.c
+	(init_directories): Changed unsafe uses of sprintf to use snprintf with
+	the correct buffer sizes.
+
+2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>
+
 	* MANIFEST: Updated.
 
 2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>
